--- a/pythonServices/Dockerfile
+++ b/pythonServices/Dockerfile
@@ -5,20 +5,15 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     libffi-dev \
     libssl-dev \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
-# Set the working directory
+    
 WORKDIR /app
-# Copy the requirements file
-COPY requirements.txt .
-# Install Python dependencies
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-# Copy the application code
-COPY download_nltk.py .
-COPY process_pdfs.py .
-COPY multi_model_class.py .
-COPY final_nltk.py .
-COPY pdf_title_outline_extractor.py .
-COPY infer_realtime.py .
-COPY xgb_model.pkl .
+COPY . .
 RUN python download_nltk.py
-CMD ["python", "process_pdfs.py"]
+RUN python load_models.py
+ENV PYTHONUNBUFFERED=1
+
+CMD ["uvicorn","server:app","--host","0.0.0.0","--port","8000"]
