--- a/nextServices/package.json
+++ b/nextServices/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start -p 8080"
   },
   "dependencies": {
     "@aws-sdk/credential-providers": "latest",
